modify the config

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Jun Li
 description: Jun Li
 favicon: /assets/img/avatar.JPG
 baseurl:
-url: https://liungkejin.github.io
+url: https://junboychina.github.io
 rss_url:
 
 # Build settings
