--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,9 +1,9 @@
 # Author settings
-name: 梁窠金
-title: Android 开发工程师
-address: 中国, 上海
-email: liungkejin@foxmail.com
-github: liungkejin
+name: Jun Li
+title: MS student in New York Student
+address: New York City, U.S.
+email: jl7333@nyu.edu
+github: https://github.com/junboychina
 gavatar: /assets/img/avatar.JPG
 workHistory:
 - work3:
@@ -32,12 +32,12 @@ workHistory:
 
 educationHistory:
 - education1:
-  organization: 安徽大学
-  degree: 学士
-  major: 化学工程与工艺
-  started: 2010
-  duration: (2010.9 - 2014.7)
-  description: 自学 C/C++, Java, Linux, 培训并参加过 ACM 比赛
+  organization: Nanjing University of Aeronautics and Astronautics
+  degree: Bachelor of Engineering
+  major: Information Engineering
+  started: 2009
+  duration: (2009.9- 2013.7)
+  description: C/C++, MATLAB, Linux, 培训并参加过 ACM 比赛
 languages:
 - language1:
   name: 中文
@@ -46,7 +46,7 @@ languages:
   name: English
   proficiency: Limit
 programmingSkills:
-- Java:
+- Matlab:
   name: Java/Android
   percentage: 90%
 - Bash:
