--- a/_data/author.yml
+++ b/_data/author.yml
@@ -6,38 +6,30 @@ email: jl7333@nyu.edu
 github: junboychina
 gavatar: /assets/img/avatar.JPG
 workHistory:
-- work3:
-  company: 上海大银幕网络科技有限公司
-  location: 中国，上海
-  title: Android 开发工程师
-  started: 2015
-  duration: (2015.10 - Present)
-  description: 开发和维护 "公证电影" App
-
 - work2:
-  company: 比亚迪精密制造上海分公司
-  location: 中国，上海
-  title: Android 开发工程师
-  started: 2014
-  duration: (2014.8 - 2015.8)
-  description: 在Android系统环境下修复所存在的 bug, 并开发新功能, 主要负责 RIL/Telephony
+  company: NYU Multimedia and Visual Computing Lab
+  location: ECE department of NYU, Brooklyn, NY
+  title: Research Assistant
+  started: 2016
+  duration: (2016.5 - now)
+  description: Machine Learning, Deep Learning, Data mining in Medical Health
 
 - work1:
-  company: 合肥卓远电子科技有限公司
-  location: 中国, 合肥
-  title: Linux 程序员
-  started: 2013
-  duration: (2013.6 - 2013.9)
-  description: 在嵌入式 Linux 环境下开发程序 (信号发生器，监控摄像头)
+  company: NYU Wireless
+  location: ECE department of NYU, Brooklyn, NY
+  title: Research Assistant
+  started: 2016
+  duration: (2016.1 - 2016.5)
+  description: Localization based on Machine Learning and Deep Learning
 
 educationHistory:
 - education2:
   organization: New York University
   degree: Master
-  major: Information Engineering
-  started: 2009
-  duration: (2009.9- 2013.7)
-  description: C/C++, MATLAB, Linux, 培训并参加过 ACM 比赛
+  major: Electrical Engineering
+  started: 2015
+  duration: (2015.9- 2017.7)
+  description: Work as Research Assistant in NYU Wireless lab and MMVC lab.
 
 - education1:
   organization: Nanjing University of Aeronautics and Astronautics
@@ -45,10 +37,10 @@ educationHistory:
   major: Information Engineering
   started: 2009
   duration: (2009.9- 2013.7)
-  description: C/C++, MATLAB, Linux, 培训并参加过 ACM 比赛
+  description: Matlab, C/C++, ARM development
 languages:
 - language1:
-  name: 中文
+  name: Chinese(中文)
   proficiency: Native
 - language2:
   name: English
@@ -57,18 +49,15 @@ programmingSkills:
 - Matlab:
   name: Java/Android
   percentage: 90%
-- Bash:
-  name: Bash Shell
-  percentage: 90%
-- CPP:
-  name: C/C++
-  percentage: 70%
-- PHP:
-  name: PHP
+- C++:
+  name: C++
+  percentage: 60%
+- Swift:
+  name: Swift
   percentage: 30%
 - Python:
   name: Python
   percentage: 30%
-- Kotlin:
-  name: Kotlin
-  percentage: 70%
+- R:
+  name: R
+  percentage: 30%
