--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ rss_url:
 highlight: true
 #highlighter: rouge
 
-timezone: Asia/Shanghai
+timezone: United States/New York City
 
 markdown: kramdown
 kramdown:
