--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ rss_url:
 highlight: true
 #highlighter: rouge
 
-timezone: United States/New York City
+timezone: America/New_York
 
 markdown: kramdown
 kramdown:
