--- a/_data/author.yml
+++ b/_data/author.yml
@@ -20,7 +20,7 @@ workHistory:
   title: Research Assistant
   started: 2016
   duration: (2016.1 - now)
-  description: Localization based on Machine Learning and Deep Learning
+  description: Localization based on Machine Learning 
 
 educationHistory:
 - education3:
